<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of Namae.

    Namae is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Namae is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Namae.  If not, see <http://www.gnu.org/licenses/>.
-->

<!--
    Developed by: Insperion
    Team: EDS Insperion
    Developer(s): Sergio Ernesto Tostado Sánchez (sets@insperion.com.mx)
    Contact: contacto@insperion.com.mx
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ntr_share"
        android:title="@string/ntr_share"
        android:icon="@drawable/ic_share_black_24dp"/>
    <item
        android:id="@+id/ntr_want_to_know_more"
        android:title="@string/ntr_wkm"
        android:icon="@drawable/ic_bubble_chart_black_24dp"/>
    <item
        android:id="@+id/ntr_about"
        android:title="@string/ntr_about"
        android:icon="@drawable/ic_live_help_black_24dp"/>
</menu>