<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of Namae.

    Namae is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Namae is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Namae.  If not, see <http://www.gnu.org/licenses/>.
-->

<!--
    Developed by: Insperion
    Team: EDS Insperion
    Developer(s): Sergio Ernesto Tostado Sánchez (sets@insperion.com.mx)
    Contact: contacto@insperion.com.mx
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_main"
    tools:context="com.insperion.sets.namae.view.WantToKnowMoreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sv_wkm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:id="@+id/ll_wkm">

            <com.codesgood.views.JustifiedTextView
                android:text="@string/wkm_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/primary_text"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:textSize="18sp"
                android:text="@string/wkm_content11"
                android:textColor="@color/primary_text"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/wkm_content12"
                android:textColor="@color/primary_text"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wkm_content13"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/primary_text"/>

            <com.codesgood.views.JustifiedTextView
                android:text="@string/wkm_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/primary_text"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:text="@string/wkm_content31"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/wkm_content32"
                android:textColor="@color/primary_text"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/wkm_content4"
                android:textSize="18sp"
                android:textColor="@color/primary_text"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_margin="@dimen/fab_margins"
                    app:fabSize="normal"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_language_black_24dp"
                    android:id="@+id/fab_sw1_youtube" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="18sp"
                    android:text="@string/wkm_content41"
                    android:textColor="@color/secondary_text"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_margin="@dimen/fab_margins"
                    app:fabSize="normal"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_language_black_24dp"
                    android:id="@+id/fab_sw2_youtube" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="18sp"
                    android:text="@string/wkm_content42"
                    android:textColor="@color/secondary_text"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
